# mistral_ocr

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mistral_ocr/: __init__.py  __main__.py
src/mistral_ocr/core/: __init__.py  processor.py
src/mistral_ocr/models/: __init__.py
src/mistral_ocr/utils/: __init__.py  encoding.py  markdown.py
tests/: __init__.py
