[project]
name = "mistral-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.9.3",
]

[project.scripts]
mistral-ocr = "mistral_ocr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
